@@ -1,3 +1,14 @@
+2000-09-19  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
+
+	* router/daemonsub.c:
+	    Do test for "an inode in processing" while looking for
+	    tasks in the router subdirs -- thus won't reinsert a
+	    task already in active handling back into the queue.
+
+	* proto/newdbprocessor.in:
+	    Test for "^bind", "ldap", "ordered" and "unordered" db
+	    types while regenerating the dbases.conf relations.
+
 2000-09-18  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
 
 	* scheduler/transport.c:
